--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,13 @@ nav a:hover::before{
 section h1{
 font-weight: bold;
 }
+ footer{
+        text-align:center;
+        clear:both;
+      }
+     h1 {
+        text-decoration:underline; 
+     }
+     h2 {
+        line-height: 2;
+     }
